# test-developer-car

./: .env.example  .gitignore  .pre-commit-config.yaml  MCP_WEBSOCKET_GUIDE.md  Makefile  README.md  README_TEST.md  docker-compose.ollama-gpu.yml  docker-compose.ollama.yml  manage.py  pyproject.toml  pytest.ini  test_print.py
.cursor/rules/: best-pratices.mdc  no-script-test.mdc
.github/workflows/: ci-pipeline.yml  integrity-backup.yml  integrity-simple.yml  production-checks.yml  release.yml
apps/cars/: __init__.py  admin.py  apps.py  constants.py  models.py  schemas.py  snippets.py  tests.py  urls.py  utils.py  views.py
apps/cars/management/: __init__.py
apps/cars/management/commands/: populate_cars.py
apps/cars/migrations/: 0001_initial.py
apps/terminal_agent/: README_LLM.md  __init__.py  llm_base.py  llm_config.py  llm_factory.py  llm_interface.py  ollama_client.py  simple_llm.py
apps/terminal_agent/management/: __init__.py
apps/terminal_agent/management/commands/: run_car_agent.py
apps/web_sockets/: README.md  __init__.py  admin.py  apps.py  channel_layer.py  mcp_consumer.py  mcp_handlers.py  mcp_rest_integration.py  models.py  schemas.py  serializers.py  tests.py  tests_mcp.py  urls.py  urls_sockets.py  views.py  views_sockets.py
config/: __init__.py  asgi.py  settings.py  urls.py
drf_base_apps/: __init__.py  admin.py  apps.py  drf_exception.py  exception.py  handler.py  models.py  schemas.py  test_runner.py  tests.py  utils.py  views.py
drf_base_apps/app_settings_template/: .bandit.yaml  .commitizen.toml  .coveragerc  .editorconfig  .flake8  .isort.cfg  COMMIT_CONVENTION.md  Makefile  conftest.py  manage.py-tpl  pyproject.toml.bandit
drf_base_apps/app_settings_template/app_name/: __init__.py-tpl  asgi.py-tpl  settings.py-tpl  urls.py-tpl  wsgi.py-tpl
drf_base_apps/app_template/: admin.py-tpl  apps.py-tpl  constants.py-tpl  models.py-tpl  schemas.py-tpl  snippets.py-tpl  tests.py-tpl  urls.py-tpl  views.py-tpl
drf_base_apps/base_django_static/base_django_static/css/: api_docs.css  django_index.css  footer.css  log_viewer.css  rest_renderer.css
drf_base_apps/base_django_static/base_django_static/js/: django_index.js  log_viewer.js  swagger-ui-bundle.js  swagger_bundle.js
drf_base_apps/core/: __init__.py
drf_base_apps/core/abstract/: README_PERMISSIONS.md  __init__.py  admin.py  apps.py  base_tests.py  base_tests_django.py  base_tests_locust.py  constants.py  exceptions.py  models.py  permissions.py  schemas.py  tests.py  views.py
drf_base_apps/core/abstract/fixtures/: default_permissions.json
drf_base_apps/core/abstract/management/: __init__.py
drf_base_apps/core/abstract/management/commands/: __init__.py  create_groups.py  export_permissions.py  generate_project_config.py  generate_tests.py  import_permissions.py  manage_permissions.py  test_group_permissions.py
drf_base_apps/core/abstract/migrations/: 0001_initial.py  0002_initial.py  0003_alter_updateuser_current_value_and_more.py  0004_alter_updateuser_options.py
drf_base_apps/core/drf_base_user/: __init__.py  admin.py  apps.py  forms.py  managers.py  middleware.py  models.py  schemas.py  tests.py  token.py  urls.py  views.py
drf_base_apps/core/drf_base_user/management/: __init__.py
drf_base_apps/core/drf_base_user/management/commands/: create_user.py
drf_base_apps/core/drf_base_user/migrations/: 0001_initial.py  0002_user_has_clb_perm_user_has_rh_perm.py  0003_alter_user_create_user_alter_user_update_user.py  0004_user_image.py  0005_user_has_changed_password_alter_user_image.py  0006_alter_user_cpf_alter_user_login_date_and_more.py  0007_remove_user_has_clb_perm_remove_user_has_rh_perm.py  0008_alter_user_status.py  0009_alter_user_email.py  0010_alter_user_email.py  0011_alter_user_email.py
drf_base_apps/core/permission/: __init__.py  admin.py  apps.py  models.py  views.py
drf_base_apps/custom_log_viewer/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
drf_base_apps/locale/pt_BR/LC_MESSAGES/: django.mo
drf_base_apps/login_record/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
drf_base_apps/login_record/migrations/: 0001_initial.py  0002_alter_loginrecord_campo_teste.py  0003_alter_loginrecord_options.py
drf_base_apps/management/commands/: generate_project_config.py
drf_base_apps/security/: admin.py  apps.py  models.py  tests.py  views.py
drf_base_apps/templates/: api_docs.html  footer.html  home.html  index.html  log_viewer.html  mcp_car_search.html  privacidade.html  rest_renderer.html  sobre_base_django.html  websocket.html
drf_base_config/: __init__.py  asgi.py  middleware.py  schema_generator.py  settings.py  token_auth.py  urls.py  views.py  wsgi.py
scripts/: bandit_to_sarif.py  init-ollama-optimized.sh  init-ollama.sh  optimize-ollama.sh  run_workflows_local.sh
